@@ -15,8 +15,9 @@ fusionforge (5.2~rc2~svn16089+) UNRELEASED; urgency=low
   * Merge fusionforge (5.2~rc1wheezy1~exp1) experimental upload
   * Move wikis to new (as of 2010-03-19, possibly by accident) data path
   * Check image upload is enabled before trying to do so (Closes: #679521)
+  * Unbreak and silence the MediaWiki nightly dump cronjob (Closes: #680165)
 
- -- Thorsten Glaser <tg@mirbsd.de>  Fri, 24 Aug 2012 10:43:04 +0200
+ -- Thorsten Glaser <tg@mirbsd.de>  Fri, 24 Aug 2012 10:53:50 +0200
 
 fusionforge (5.2~rc1wheezy1~exp1) experimental; urgency=low
 
